1. Added more assets: shaders and textures; 2. Use a more clever CMakeLists hierarchy; 3. More complex OpenGL scene and user interactioin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,22 +24,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 find_package(OpenGL REQUIRED)
 
-include_directories(
-    third_party/AntTweakBar-1.16/include/
-    third_party/glfw-3.1.2/include/GLFW/
-    third_party/glm-0.9.7.1/
-    third_party/glew-1.13.0/include/
-    .
-)
-
-add_definitions(
-    -DTW_STATIC
-    -DTW_NO_LIB_PRAGMA
-    -DTW_NO_DIRECT3D
-    -DGLEW_STATIC
-    -D_CRT_SECURE_NO_WARNINGS
-)
-
 ### QT 4.8
 
 find_package(Qt4 REQUIRED QtCore QtGui QtOpenGL)
@@ -60,31 +44,9 @@ set(ALL_LIBS
     GLEW_1130
 )
 
-file(GLOB QT_FORMS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/gui/*.ui)
-file(GLOB QT_RESOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/gui/resources/*.qrc)
-file(GLOB_RECURSE QT_MOC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS src/gui/*.h)
-file(GLOB_RECURSE QT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS src/gui/*.cpp)
-
-QT4_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
-QT4_WRAP_UI(QT_FORMS_HPP ${QT_FORMS})
-QT4_WRAP_CPP(QT_MOC_HPP ${QT_MOC})
-
-# @TODO(xinghe): For debugging purpose.
-# message("SSSSS : ${QT_QTGUI_LIBRARIES}, ${QT_QTOPENGL_LIBRARIES}, ${QT_MOC_HPP}")
-
-# The main entry.
-add_executable(main
-    src/main.cpp
-    ${QT_MOC_HPP}
-    ${QT_SOURCES}
-)
-target_link_libraries(main
-    ${ALL_LIBS}
-)
-create_target_launcher(main WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
-
-SOURCE_GROUP(common REGULAR_EXPRESSION ".*/common/.*" )
-SOURCE_GROUP(shaders REGULAR_EXPRESSION ".*/.*shader$" )
-
 # Compile the third_party dependencies.
 add_subdirectory(third_party)
+add_subdirectory(src)
+
+# Create the launcher file for the main entry-point.
+create_target_launcher(main WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
